<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center|top">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/first_et"
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/second_et"
        android:layout_marginTop="16dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_plus"
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="+"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_div"
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="/"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</LinearLayout>